# SSL-Features-EEG

./: .coverage  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
scripts/: data_preparation.bash  milp.py  sandbox.py
scripts/compute_pseudo_targets/: band_power.py  band_power_ai_mind.py  compute_pseudo_targets.bash
scripts/dataset_downloads/: dortmund_vital.py  download.bash  lemon.py  miltiadous.py  srm.py  wang.py
scripts/debugging/: check_lemon.py  debugging_lemon.py  debugging_td_brain.py
scripts/model_training/: check_profiles.py  continue_experiments.py  continue_experiments_elecssl.py  continue_experiments_multi_task.py  continue_experiments_prediction_models.py  elecssl_experiments.py  elecssl_hpo.py  multiple_scripts.bash  run_experiments.py  submit_script_1.sm  submit_script_2.sm  submit_script_3.sm  tsd_job_script.sm
scripts/prepare_input_data/: band_pass.py  band_pass_add_dataset.py  band_pass_ai_mind.py  prepare_input_data.bash
scripts/results/: regression_performance.py
scripts/results_scripts/: count_downstream_participants.py  experiments_comparisons.py
scripts/visualise_data/: inspect_preprocessed_versions.py  plot_channel_positions.py  plot_eeg_data.py  plot_power.py  visualise_ai_mind_data.py  visualise_dortmund_vital_data.py  visualise_lemon_data.py  visualise_targets.py
src/elecssl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py
tests/data/: .coverage  conftest.py  test_combined_datasets.py  test_paths.py  (+1 more)
(+147 files in other folders)
