[metadata]
name = elecssl
description = Project for self supervised learning on EEG data
author = Thomas Tveitstøl
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages =
    find:
install_requires =
    requests>=2
    numpy>=1.2
    inflection~=0.5.1
python_requires = >=3.8
package_dir =
    = src
zip_safe = no

[options.extras_require]
testing =
    pytest>=8.3
    pytest-cov>=5.0
    mypy>=1.11
    flake8>=7.1
    tox>=4.18

[options.package_data]
elecssl = py.typed
elecssl.data = *.json

[options.packages.find]
where = src
include = elecssl.*

[flake8]
max-line-length = 120